Se ha creado una versión inicial del horario en front

--- a/front/index.html
+++ b/front/index.html
@@ -17,10 +17,43 @@
       <ul>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">Subir Data</a></li>
-        <li><a href="#" id="api-generate">Generar Horario</a></li>
+        <li><a href="#" onClick="generarHorario()">Generar Horario</a></li>
       </ul>
     </nav>
-    <section></section>
+    <section>
+        <div id="recibir_data">
+            <table id="horarioTable" border="1">
+                <thead>
+                    <tr>
+                        <th>Horario</th>
+                        <th>Salón 1</th>
+                        <th>Salón 10</th>
+                        <th>Salón 11</th>
+                        <th>Salón 12</th>
+                        <th>Salón 2</th>
+                        <th>Salón 3</th>
+                        <th>Salón 4</th>
+                        <th>Salón 5</th>
+                        <th>Salón 6</th>
+                        <th>Salón 7</th>
+                        <th>Salón 8</th>
+                        <th>Salón 9</th>
+                        <th>Hugo Pineda</th>
+                        <th>Lab Aguas</th>
+                        <th>Lab FIsica</th>
+                        <th>Lab Industrial</th>
+                        <th>Salón Mayor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Los datos se agregarán aquí usando JavaScript -->
+                </tbody>
+            </table>
+            
+        </div>
+    </section>
+
+    
 
     <script src="scripts/generateClassSchedule.js"></script>
   </body>
