--- a/front/pages/subir_data.html
+++ b/front/pages/subir_data.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Pagina Principal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/mainStyles.css">
+    <link rel="stylesheet" href="../styles/mainStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
@@ -15,17 +15,15 @@
     </label>
     <label class="logo">Generador de Horarios</label>
     <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="pages/subir_data.html">Subir Data</a></li>
-        <li><a href="#" onClick="generarHorario()">Generar Horario</a></li>
+        <li><a class="active" href="../index.html">Home</a></li>
+        <li><a href="subir_data.html">Subir Data</a></li>
+        <li><a href="../index.html" onClick="generarHorario()">Generar Horario</a></li>
     </ul>
 </nav>
 <section>
-    <div id="recibir_data">
-        <!-- La tabla se generará aquí usando JavaScript -->
-    </div>
+    
 </section>
 
-<script src="scripts/generateClassSchedule.js"></script>
+<script src="../scripts/generateClassSchedule.js"></script>
 </body>
 </html>
