Se ha implementado el mensaje que más adelante sera el indice de eficiencia del horario

--- a/front/index.html
+++ b/front/index.html
@@ -24,6 +24,9 @@
     <div id="recibir_data">
         <!-- La tabla se generará aquí usando JavaScript -->
     </div>
+    <div id="messageContainer">
+        <!-- El mensaje se agregará aquí dinámicamente -->
+    </div>
 </section>
 
 <script src="scripts/generateClassSchedule.js"></script>
